syntax = "proto3";

package djls.v1.messages;

import "v1/commands.proto";

message Request {
    oneof command {
        commands.Check.HealthRequest check__health = 1;
        commands.Check.GeoDjangoPrereqsRequest check__geodjango_prereqs = 2;
        commands.Python.GetEnvironmentRequest python__get_environment = 1000;
        commands.Django.GetProjectInfoRequest django__get_project_info = 2000;
    }
}

message Response {
    oneof result {
        commands.Check.HealthResponse check__health = 1;
        commands.Check.GeoDjangoPrereqsResponse check__geodjango_prereqs = 2;
        commands.Python.GetEnvironmentResponse python__get_environment = 1000;
        commands.Django.GetProjectInfoResponse django__get_project_info = 2000;
        Error error = 9000;
    }
}

message Error {
    Code code = 1;
    string message = 2;
    string traceback = 3;
    enum Code {
        UNKNOWN = 0;
        INVALID_REQUEST = 1;
        PYTHON_ERROR = 2;
        DJANGO_ERROR = 3;
    }
}
